--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: python
 Priority: extra
 Maintainer: Cory Dodt <launchpad@spam.goonmill.org>
 Build-Depends: debhelper (>= 5), hyperestraier (>= 1.4.1), hyperestraier (<< 1.5.0), 
-    libestraier-dev, libqdbm-dev, python-all-dev, python-central, cdbs
+    libestraier-dev, libqdbm-dev, python-all-dev, python-central, cdbs, 
+    python-setuptools
 XS-Python-Version: >= 2.5, << 3.0
 Standards-Version: 3.7.2
 
