modernizing packaging II

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist = py27
 
 [testenv]
-commands = pytest -vv
+commands =
+    python setup.py install
+    pytest -vv
 deps =
-setenv = 
+setenv =
     HOME = {toxinidir}
