trying to fix travis build:

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
+pre_install: "apt-get install -y libestraier-dev"
 install: "pip install tox-travis"
 # command to run tests
 script: tox
