--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27
 [testenv]
 commands =
     python setup.py install
-    pytest -vv --cov-fail-under=100
+    pytest -vv
 deps =
 setenv =
     HOME = {toxinidir}
