--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,7 @@ envlist = py27
 
 [testenv]
 commands =
-    python setup.py install
-    pytest -vv 
+    pytest -vv
 deps =
+extras = dev
 setenv =
-    HOME = {toxinidir}
