#5 add Python 3 support to the C extension and python code

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py27
+envlist = py27, py37
 
 [testenv]
 commands =
-    pytest -vv
+    pytest -vv {posargs}
 deps =
 extras = dev
 setenv =
