--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = --cov=hypy --cov-report term-missing -v
-testpaths = hypy/
+testpaths = src/hypy/
 flakes-ignore =
     doc/* ALL
 twisted = 1
